gitops/workloads/demo-app/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-app
spec:
  parentRefs:
    - name: demo-gateway
      sectionName: http
  hostnames:
    - demo.lab.home.arpa
  rules:
    - backendRefs:
        - name: demo-app
          port: 80
